LaboratoryTasks/Homeworks/#9-Ninth-Homework/student-info-ngnix/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-info-nginx-v2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: student-info-nginx
      version: "2.0"
  template:
    metadata:
      labels:
        app: student-info-nginx
        version: "2.0"
    spec:
      containers:
        - name: student-info-nginx-container
          image: ivkeex/student-info-nginx:2.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: student-info-nginx-v2-service
spec:
  selector:
    app: student-info-nginx
    version: "2.0"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
